# vanity-extension-id-generator

./: .gitignore  .gitmodules  CMakeLists.txt  COLAB_TLDR.md  METAL-GPU-README.md  README.md  wordlist.txt
my-app/: biome.json  package.json  pnpm-lock.yaml  tsconfig.app.json
my-app/src/: App.tsx  wgsl.d.ts
my-app/src/components/: CrashButton.tsx
my-app/src/gpu/: PrimeGeneratorGPU.ts  constants.ts  index.ts  primeGenerator.wgsl
my-app/src/hooks/: usePrimeGenerator.ts
my-app/src/pages/: Gallery.tsx  PrimeGenerator.tsx
src/: main_metal.cpp
src-old/: generator.cpp  generator.hpp  main.cpp
src/metal/: bigint.metal  metal_runner.mm  vanity_search.metal
vanity-ext-id-cpu/: CMakeLists.txt  README.md  reconstruct_gpu.py
vanity-ext-id-cpu/src/: main.cpp
vanity-ext-id-cpu/tools/: generate_prime_pool.cpp
vanity-ext-id-cuda/: .gitignore  CMakeLists.txt  PERFORMANCE.md  README.md
vanity-ext-id-cuda/src/: main.cpp
vanity-ext-id-cuda/src/cuda/: cgbn_multiply.cuh  common.cuh  crypto.cuh  cuda_runner.cu  cuda_runner.h  kernels.cu  prime_validator.cpp
vanity-ext-id-cuda/tools/: bench_cgbn_vs_schoolbook.cu  cgbn_prime_gen.cu  cgbn_prime_gen_tunable.cu  cuda_prime_gen.cu  test_cgbn_mul.cu
vanity-ext-id-metal/: CMakeLists.txt  README.md  reconstruct.py
vanity-ext-id-metal/src/: generator.cpp  generator.hpp  main.cpp
vanity-ext-id-metal/src/metal/: bigint.metal  metal_runner.h  prime_candidate_generator.metal  prime_generator.metal  prime_metal_runner.h  prime_metal_runner.mm  sha256.metal
vanity-ext-id-metal/tools/: generate_prime_pool.cpp  generate_prime_pool_fast.cpp  generate_prime_pool_turbo.cpp
